# QQRobot

./: README  docker-compose.yml
bot/: .env.prod  Dockerfile  bot.py  pyproject.toml
go-cqhttp/: Dockerfile  config.yml  device.json
go-cqhttp/data/: image.db  video.db  yulu-go-cqhttp.lnk
go-cqhttp/data/leveldb-v3/: 004472.ldb  004473.ldb  004474.ldb  004475.ldb  004476.ldb  004477.ldb  004478.ldb  004479.ldb  004480.ldb  004481.ldb  004482.ldb  004483.ldb  004484.ldb  004485.ldb  LOG  MANIFEST-004487
go-cqhttp/data/voices/: 0047B679-B2C3-076F-BE83-223262137B2C.amr  0B2478F5D760F2B2460074CEFA9684F0.amr  0B7FCCD5-6F27-03FF-5F1C-13E25F67353A.amr  0D22A1F15D626E7F7F06E541F7E00962.amr  0D87323A17A021FF4E42D763C092CB33.amr  0DE9247CB337F60590419DBB7E71BCFB.amr  0E45F821C87F849328600F399E3BD6C9.amr  0EF7B442-ECC4-F888-00E5-08777C0BCC9F.amr  1484DE3E-9F65-5A08-847F-5CAB4AE72070.amr  169477E1A81AE431CDAFB478C6B10B6E.amr  18185E782492114EE72E772CF5857947.amr  186087828DDF91370F2AE81E1F1D6A3B.amr  1992B604-58CE-4B8E-6955-6252DB24DE2D.amr  1BA23FBFABAF9AC2E00FA135C7828AD3.amr  1C5036652D1396DCABC813C2A7EBC666.amr  1E02785E-D4B6-49D6-508C-C7E216275EAE.amr  1EE419484C16F4804FFE8D70C28C6969.amr  20F915F9-CD18-34A9-37B5-98DD0420BC23.amr  2174E378-2404-F8EE-F734-8F0E3FB7EE86.amr  23184341-68B7-A339-C7BA-9FD9CD101881.amr  2617EF32EDA0F9AF66F5D16B27B1FB53.amr  26764DC2-FCA2-99AF-BC8D-AC8F6C719380.amr  28672D29-9F18-BB8D-DC08-0583FABE4B1A.amr  363EA390BE7426F6B215028D8F0F0A26.amr  (+90 more)
go-cqhttp/dumps/: 1663658550.dump
qbot/: config.yml  session.token
