[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["MaplePoetryWine <2714871989@qq.com>"]
readme = "README.md"
packages = [{include = "bot"}]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-beta.1"
nb-cli = "^0.6.7"
nonebot-adapter-onebot = "^2.1.5"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.7"

[tool.nonebot]
plugins = []
plugin_dirs = ["src/plugins"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = 'aliyun.mirrors'
url = "http://mirrors.aliyun.com/pypi/simple/"